<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightWhite"
    android:orientation="vertical"
    tools:context=".user.UserDashboard">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <ImageView
            android:id="@+id/menu_iconId"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/menu_open" />

        <ImageView
            android:id="@+id/plus_iconId"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@color/brownLight"
            android:padding="8dp"
            android:src="@drawable/plus"


            />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/logoNameId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/logo_name"
                    android:textColor="@color/darkGrey"
                    android:textSize="24sp" />

                <RelativeLayout
                    android:id="@+id/searchBoxId"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@id/logoNameId"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginBottom="20dp"
                    android:background="@color/textColorSearchBox"
                    android:elevation="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/search_hint"
                        android:textSize="18sp" />

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="15dp"
                        android:src="@drawable/search_icon"

                        />


                </RelativeLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"

                    >

                    <RelativeLayout
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/restaurant_card"
                        android:elevation="8dp">

                        <ImageView
                            android:id="@+id/restaurantImgId"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_centerInParent="true"
                            android:src="@drawable/restaurant_icon"

                            />

                    </RelativeLayout>

                    <TextView
                        android:id="@+id/restaurantTextId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat"
                        android:gravity="center_horizontal"
                        android:text="@string/restaurant"
                        android:textAlignment="center"
                        android:textSize="16dp"

                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"

                    >

                    <RelativeLayout
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/hotel_card"
                        android:elevation="8dp">

                        <ImageView
                            android:id="@+id/hotelImgId"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_centerInParent="true"
                            android:src="@drawable/hotel" />

                    </RelativeLayout>

                    <TextView
                        android:id="@+id/hotelTextId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/hotel"
                        android:textAlignment="center"
                        android:textSize="16dp"


                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"


                    >

                    <RelativeLayout
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/airport_card"
                        android:elevation="8dp">

                        <ImageView
                            android:id="@+id/airportImgId"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_centerInParent="true"
                            android:src="@drawable/airport_icon"

                            />
                    </RelativeLayout>

                    <TextView
                        android:id="@+id/airportTextId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat"
                        android:gravity="center_horizontal"
                        android:text="@string/airport"
                        android:textAlignment="center"
                        android:textSize="16dp"


                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"

                    >

                    <RelativeLayout
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/shop_card"
                        android:elevation="8dp">

                        <ImageView
                            android:id="@+id/shopImgId"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_centerInParent="true"
                            android:src="@drawable/shop_icon"

                            />
                    </RelativeLayout>

                    <TextView
                        android:id="@+id/shopTextId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat"
                        android:gravity="center_horizontal"
                        android:text="@string/shop"
                        android:textAlignment="center"
                        android:textSize="16dp"


                        />
                </LinearLayout>


            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:background="@color/lightWhite">

                <LinearLayout
                    android:id="@+id/featuredLayoutId"
                    android:layout_width="170dp"
                    android:layout_height="320dp"
                    android:background="@color/brownLight"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/featuredTextId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="50dp"
                        android:text="@string/featured_text"
                        android:textAllCaps="true"
                        android:textColor="@color/darkGrey"
                        android:textSize="25sp" />

                    <TextView
                        android:id="@+id/featuredDesId"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:paddingRight="15dp"
                        android:text="@string/make_call_desc"
                        android:textSize="16sp" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/featured_recyclerViewId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/featuredLayoutId"
                    >

                </androidx.recyclerview.widget.RecyclerView>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="vertical"
                android:padding="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/mostViewId"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_bold"
                        android:text="@string/most_view_location"
                        android:textColor="@color/textColor_black"
                        android:textSize="22sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_alignBaseline="@+id/mostViewId"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/view_all"
                        android:textColor="@color/brownDarkPrimary"
                        android:textSize="14sp" />

                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/mostviewRecylcerViewId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                </androidx.recyclerview.widget.RecyclerView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="vertical"
                android:padding="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/categoriesTextId"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_bold"
                        android:text="@string/categories"
                        android:textColor="@color/textColor_black"
                        android:textSize="22sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_alignBaseline="@+id/categoriesTextId"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/view_all"
                        android:textColor="@color/brownDarkPrimary"
                        android:textSize="14sp" />

                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/categoiresviewRecylcerViewId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </androidx.recyclerview.widget.RecyclerView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>